c_elb_sg.tf
resource "aws_security_group" "elb" {
  name        = "${var.vpc_tag}_elb_sg"
  description = "Used in the terraform"
  vpc_id = "${aws_vpc.kube_vpc.id}"

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # ensure the VPC has an Internet gateway or this step will fail
  depends_on = ["aws_internet_gateway.gw"]
   
}
